# TLAStudio

./: Package.swift  README.md  TLACore.framework
Docs/architecture/: 01-document-management.md  02-language-intelligence.md  03-tlc-integration.md  04-tlaps-integration.md  05-distribution.md  06-performance.md
Resources/: Info.plist  TLAStudio.entitlements
Resources/SampleSpecs/: DieHard.tla  SimpleProof.tla
Scripts/: build-app.sh  build-production.sh  build-provers.sh  build-rust-core.sh  build-tlapm.sh  build-tlc-native.sh  create-app-bundle.sh  create-dmg.sh  download-tlapm.sh  install-prereqs.sh  notarize-app.sh  proxy-config.json  reachability-metadata.json  reflect-config.json  release.sh  serialization-config.json  sign-app.sh
Sources/SourceEditor/: BracketMatcher.swift  TLASourceEditor.swift  TLASyntaxHighlighter.swift
Sources/TLACore/: Cargo.toml
Sources/TLACore/src/: lib.rs
Sources/TLAService/: TLAServiceProtocol.swift
Sources/TLAStudioApp/: App.swift
Sources/TLAStudioApp/Commands/: FileCommands.swift
Sources/TLAStudioApp/Document/: BottomPanel.swift  DocumentWindowContent.swift  EditorArea.swift  HoverPopover.swift  TLADocument.swift  TLADocumentController.swift  TLAWindowController.swift
Sources/TLAStudioApp/FindReplace/: FindReplaceHostingView.swift  FindReplaceManager.swift  (+1 more)
Sources/tla_coreFFI/: module.modulemap  tla_coreFFI.h
Tests/: TLAStudioTests.swift
Tests/TLAStudioTests/: GenericLRUCacheTests.swift  LineBufferTests.swift  ModelConfigSecurityTests.swift  ProofAnnotationManagerTests.swift  StreamStateTests.swift
(+65 files in other folders)
